k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mk1-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: mk1.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mk1-app
                port:
                  number: 8080
